--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/quartz?useSSL=false&allowPubli
 spring.datasource.username=mysql
 spring.datasource.password=1234
 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/quartz_pg
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
 
 ## quartz setting
 spring.quartz.job-store-type=jdbc
